# 00-ai-engineering-bootcamp

./: .gitignore  Dockerfile.items_mcp  Dockerfile.reviews_mcp  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
evals/: eval_coordinator_agent.py  eval_retrievers.py
notebooks/week_1/: 01-llm-apis.ipynb  02-explore-amazon-dataset.ipynb
notebooks/week_2/: 01-RAG-preprocessing-Amazon.ipynb  02-RAG-pipeline.ipynb  03-LANGSMITH-testcase.ipynb  04-evaluation-dataset.ipynb  05-RAG-Evals.ipynb
notebooks/week_3/: 01-Structured-Outputs-Intro.ipynb  02-Structured-Outputs-RAG-pipeline.ipynb  04-Reranking.ipynb  05-Prompt-Versioning.ipynb
notebooks/week_3/prompts/: retrieval_generation.yaml
notebooks/week_4/: 01-LangGraph-Intro.ipynb  02-Query-Re-writing.ipynb  03-Router.ipynb  04-Agent-Single-Turn.ipynb
notebooks/week_4/utils/: utils.py
notebooks/week_5/: 01-Memory-checkpoints.ipynb  03-Streaming-State.ipynb  04-Human-Feedback.ipynb  05-MCP.ipynb
notebooks/week_6/: 01-Shopping-Cart-Tools.ipynb  02-Shopping-Cart-Agent.ipynb  03-Coordinator-Agent.ipynb  04-Coordinator-Evaluation.ipynb
notebooks/week_6/utils/: tools.py
notebooks/week_7/: 01-warehouse-agent-database.ipynb  02-Warehouse-Agent-Tools.ipynb  03-Warehouse-Agent-LangGraph.ipynb  04-litellm-router.ipynb  05-CI-Quality-Gate.ipynb
notebooks/week_7/utils/: tools.py
sql/: shopping_cart_table.sql  warehouse_management.sql
src/api/: app.py
src/api/agent/: agents.py  (+4 more)
src/chatbot_ui/: app.py
src/items_mcp_server/: main.py  utils.py
src/reviews_mcp_server/: main.py  utils.py
(+24 files in other folders)
