[project]
name = "00-ai-engineering-bootcamp-cohort-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.39.1",
    "groq>=0.32.0",
    "ipykernel>=6.30.1",
    "openai>=1.109.1",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.11.9",
    "streamlit>=1.50.0",
    "pandas==2.2.3",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "matplotlib>=3.8.0",
    "qdrant-client>=1.15.1",
]
