[project]
name = "00-ai-engineering-bootcamp-cohort-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.39.1",
    "groq>=0.32.0",
    "ipykernel>=6.30.1",
    "openai>=1.109.1",
    "pydantic-settings>=2.11.0",
    "pydantic>=2.11.9",
    "streamlit>=1.50.0",
    "pandas==2.2.3",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "matplotlib>=3.8.0",
    "qdrant-client>=1.15.1",
    "langsmith>=0.4.35",
    "langgraph>=0.6.10",
    "ragas>=0.3.7",
    "fastembed>=0.7.3",
    "cohere>=5.20.0",
    "jinja2>=3.1.6",
    "postgres>=4.0",
    "psycopg2-binary>=2.9.11",
    "langgraph-checkpoint-postgres>=3.0.1",
    "psycopg[binary]>=3.2.12",
    "fastmcp==2.12.0",
    "beartype==0.20.0",
    "litellm>=1.80.5",
]
